Added pg as a devDependency.

--- a/issue-1/package.json
+++ b/issue-1/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babelify": "^7.3.0",
-    "browserify": "^14.4.0"
+    "browserify": "^14.4.0",
+    "pg": "^7.0.2"
   }
 }
