--- a/issue-1/package.json
+++ b/issue-1/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babelify": "^7.3.0",
