--- a/issue-1/package.json
+++ b/issue-1/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
+    "start": "babel-node server-files/index.js",
     "bundle": "browerify -t babelify main.js > bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
