--- a/issue-1/package.json
+++ b/issue-1/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "watch:client": "watchify public/main.js -v > server-files/bundle.js -t babelify",
+    "watch:server": "nodemon server-files/index.js",
     "start": "babel-node server-files/index.js",
     "bundle": "browerify -t babelify main.js > bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +25,8 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
-    "pg": "^7.0.2"
+    "nodemon": "^1.11.0",
+    "pg": "^7.0.2",
+    "watchify": "^3.9.0"
   }
 }
