--- a/issue-1/package.json
+++ b/issue-1/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch:client": "watchify public/main.js -v > server-files/bundle.js -t babelify",
+    "watch:client": "watchify client/main.js -v > server-files/public/bundle.js -t babelify",
     "watch:server": "nodemon server-files/index.js",
     "start": "babel-node server-files/index.js",
-    "bundle": "browerify -t babelify main.js > bundle.js",
+    "bundle": "browerify -t babelify client/main.js > server-files/public/bundle.js",
+    "all": "npm-run-all watch:client watch:server start bundle",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -26,6 +27,7 @@
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "nodemon": "^1.11.0",
+    "npm-run-all": "^4.0.2",
     "pg": "^7.0.2",
     "watchify": "^3.9.0"
   }
