--- a/issue-1/package.json
+++ b/issue-1/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch:client": "watchify client/main.js -v > server-files/public/bundle.js -t babelify",
+    "watch:client": "watchify client/main.js -v -o server-files/public/bundle.js -t babelify",
     "watch:server": "nodemon server-files/index.js",
     "start": "babel-node server-files/index.js",
     "bundle": "browerify -t babelify client/main.js > server-files/public/bundle.js",
-    "all": "npm-run-all watch:client watch:server start bundle",
+    "all": "run-p watch:client start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
