--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.17.2",
     "browserify": "^14.4.0",
+    "chai": "^4.1.0",
+    "mocha": "^3.5.0",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "pg": "^7.0.2",
+    "request": "^2.81.0",
     "watchify": "^3.9.0"
   }
 }
