--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "mocha test/ -w -R nyan",
     "watch:client": "watchify client/main.js -v -o server-files/public/bundle.js -t babelify",
     "watch:server": "nodemon server-files/index.js",
     "start": "babel-node server-files/index.js",
     "bundle": "browerify -t babelify client/main.js > server-files/public/bundle.js",
-    "all": "run-p watch:client start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "all": "run-p watch:client start"
   },
   "keywords": [],
   "author": "",
