--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "knex": "^0.13.0",
     "react": "^15.6.1",
@@ -32,6 +33,7 @@
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "pg": "^7.0.2",
+    "pg-bump": "^1.0.3",
     "request": "^2.81.0",
     "watchify": "^3.9.0"
   }
