--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-notes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server-files/index.js",
   "scripts": {
     "db:make": "pg-bump create",
     "db:rebuild": "pg-bump down && pg-bump up",
@@ -11,7 +11,7 @@
     "test": "mocha test/ -w -R nyan",
     "watch:client": "watchify client/main.js -v -o server-files/public/bundle.js -t babelify",
     "watch:server": "nodemon server-files/index.js",
-    "start": "babel-node server-files/index.js",
+    "start": "babel-node .",
     "bundle": "browerify -t babelify client/main.js > server-files/public/bundle.js",
     "all": "run-p watch:client start"
   },
