Added an engines field to package.json. #13

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "react-notes",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.2.1"
+  }
   "description": "",
   "main": "server-files/index.js",
   "scripts": {
