--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "description": "",
   "main": "server-files/index.js",
   "scripts": {
+    "heroku-postbuild": "npm run db:up",
+    "postinstall": "npm run bundle",
     "db:make": "pg-bump create",
     "db:rebuild": "pg-bump down && pg-bump up",
     "db:down": "pg-bump down",
